--- a/static/css/editteam.css
+++ b/static/css/editteam.css
@@ -13,6 +13,19 @@ body {
   background-position: stretch;
 }
 
+.moreinfo[title]:hover:after {
+  content: attr(title);
+  position: relative;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #000;
+  color: #fff;
+  padding: 4px 8px;
+  border-radius: 4px;
+  white-space: nowrap;
+}
+
 .usercard {
   background-color: #d4f3f1a2;
 }
