--- a/templates/all_mons.html
+++ b/templates/all_mons.html
@@ -49,7 +49,8 @@
     </div>
   </div>
   <div class="d-flex justify-content-center align-items-center">
-    <a href="{{ url_for('userhome')}}" class="btn btn-primary mt-2">Go Home</a>
+    <a href="{{ url_for('userhome')}}" class="btn btn-primary m-2">Go Home</a>
+    <a href="{{ request.referrer }}" class="btn btn-primary m-2">Go Back</a>
   </div>
 </div>
 {% endblock %}
