--- a/templates/get_mon.html
+++ b/templates/get_mon.html
@@ -43,17 +43,20 @@
                     form.monname(class="form-control") }}
                   </div>
                   <div
-                    class="row justify-content-between align-items-center mb-2"
+                    class="row justify-content-between align-items-center m-2"
                   >
-                    <div class="col">
+                    <div class="col mt-2">
                       {{ form.submit(class="btn btn-primary")}}
                     </div>
                   </div>
                   <div class="d-flex justify-content-center align-items-center">
                     <a
                       href="{{ url_for('userhome')}}"
-                      class="btn btn-primary mt-2"
+                      class="btn btn-primary m-2"
                       >Go Home</a
+                    >
+                    <a href="{{ request.referrer }}" class="btn btn-primary m-2"
+                      >Go Back</a
                     >
                   </div>
                 </fieldset>
