--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .base-background {
-  background-image: url(../bg.png);
+  background-image: url(../bg.webp);
 }
 
 .edit-background {
