--- a/static/css/editteam.css
+++ b/static/css/editteam.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "pressstart";
-  background-image: url(../bgpurple.png);
+  background-image: url(../bgblue.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: stretch;
